--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                       <div class="slider--item-image">
                         <img src="media/Lunabi.png">
                       </div>
-                      <p class="slider--item-title">Lunabi</p>
-                      <p class="slider--item-description">3d Modeling Project: Music Flows into Your body</p>
+                      <p class="slider--item-title">Nyam</p>
+                      <p class="slider--item-description">AI Powered Snack Recommendation Ecommerece Project</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
