--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="Lunabi.html" style="text-decoration: none; color: inherit;">
+                    <a href="Nyam.html" style="text-decoration: none; color: inherit;">
                       <div class="slider--item-image">
                         <img src="media/Lunabi.png">
                       </div>
