--- a/Nyam.html
+++ b/Nyam.html
@@ -21,8 +21,7 @@
     </div>
 
     <div class="content">
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/H4ovKgZcZBI9z6H5QzUfFs/Final-Presentation?node-id=1-119&embed-host=share" allowfullscreen></iframe>
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/H4ovKgZcZBI9z6H5QzUfFs/Final-Presentation?page-id=0%3A1&node-id=48-159&node-type=frame&viewport=2665%2C383%2C0.14&scaling=min-zoom&content-scaling=fixed&embed-host=share" allowfullscreen></iframe>    
     </div>
-</div>
 </body>
 </html>
