--- a/Nyam.html
+++ b/Nyam.html
@@ -15,7 +15,7 @@
         </header>
     <div class="intro">
         <div class="intro--banner">
-          <h1>Nyam<br></h1><h3>Lunabi is a 3d Modeling Project in Artd333, combination project with Krannert Center. Once upon a time, in the deepest part of the forest, there lived a dream-spreading elephant named Lunabi, who, through his magical songs sung under the moonlight, could spread dreams and hopes, breathing positive energy into all forest creatures who heard him, thereby transforming their lives for the better.He goes through the leaves and makes a sound. The sky started singing under the moonlight every night. His songs have magical power, so he breathed positive energy into everywhere he could hear them. After hearing the song, the forest creatures didn't lose their dreams and hopes and began to positively change their lives. Every note of Lunabi came together, evoking many people's dreams and happy memories.
+          <h1>Nyam<br></h1><h3>"Nyum!" is a personalized snack subscription service that goes beyond simply delivering snacks. Rooted in the concept of emotional connection, it uses custom surveys and an emotion-based recommendation system to analyze users' moods, stress levels, and preferences. By tagging snacks with emotional cues like "comfort" or "energy," the app helps users discover treats that not only satisfy cravings but also align with their emotional needs. Perfect for students, busy workers, and anyone seeking personalized comfort, "Nyum!" redefines snacking as a source of emotional support and satisfaction. The name, inspired by Korean onomatopoeia, captures the playful and delightful essence of snacking.
         </h3>
         </div>
     </div>
