--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <li class="slider--item slider--item-left">
                     <a href="Nyam.html" style="text-decoration: none; color: inherit;">
                       <div class="slider--item-image">
-                        <img src="media/Lunabi.png">
+                        <img src="media/NyamP.png">
                       </div>
                       <p class="slider--item-title">Nyam</p>
                       <p class="slider--item-description">AI Powered Snack Recommendation Ecommerece Project</p>
