--- a/Nyam.html
+++ b/Nyam.html
@@ -29,6 +29,14 @@
           allowfullscreen>
       </iframe>    
   </div>
+
+  <div class="content">
+    <iframe 
+          style="border: 1px solid rgba(0, 0, 0, 0.1);" 
+          width="1440" 
+          height="900" 
+          style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/N3zmx8QPu8JKZzWJsHdQWF/Advanced-Prototype-Nyam?page-id=0%3A1&node-id=1-6563&node-type=frame&viewport=1212%2C347%2C0.04&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A6563&embed-host=share" allowfullscreen></iframe>
+  </div>
   
 </body>
 </html>
