--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>The<br>History<br>of my Life<br></h2>
+                <h2>The<br>Story<br>of my Life<br></h2>
                 <a href="#0">More
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
